ndb - bug#44908   Out of fragment records in DIH, adjust for no of   LQH instances and add proper error message   (which *should* not happen, hence marked internal error)